Working with no pods

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -2,3 +2,6 @@ product:
   info: '{price, number, USD} if ordered by {deadline, date, time}'
   buy: 'buy'
   title: 'Product Listing'
+auth:
+  logout: 'Logout'
+  login: 'Login'
