--- a/translations/fr-fr.json
+++ b/translations/fr-fr.json
@@ -1,6 +1,6 @@
 {
   "product": {
-    "info": "{price, number, EUR} si acheté par {deadline, date, time}",
+    "info": "{price, number, EUR} si acheté avant {deadline, date, time}",
     "buy": "acheter",
     "title": "liste des produits"
   }
